[package]
name = "restls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
clap = "4.1.1"
anyhow = "1.0.68"
tracing = "0.1.26"
structopt = "0.3.26"
tracing-subscriber = "0.3.16"
bytes = "1.3.0"
sha1 = "*"
hmac = "*"
tokio-util = { version = "*", features = ["full"] }
futures-util = "0.3.26"