[package]
name = "restls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
clap = "4.1.1"
anyhow = "1.0.72"
tracing = "0.1.26"
structopt = "0.3.26"
tracing-subscriber = "0.3.16"
bytes = "1.3.0"
hmac = "*"
tokio-util = { version = "*", features = ["full"] }
futures-util = "0.3.26"
sha2 = "*"
rand = "0.8.5"
blake3 = { version = "1.4.1", features = ["traits-preview"] }
